# ivy-dice

./: MODULE.bazel  README.md  dice.conf
backend/: .gitignore  BUILD.bazel  db.go  go.mod  go.sum  main.go  util.go
frontend/: .gitignore  BUILD.bazel  tailwind.config.js  tailwind.css
frontend/public/: deposit.php  index.html  index.js  index.php  index2.php  util.php  withdraw.php
